@@ -31,7 +31,7 @@ PROJECT_NUMBER         = @VERSION@
 # If a relative path is entered, it will be relative to the location 
 # where doxygen was started. If left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = @docpath@
+OUTPUT_DIRECTORY       = 
 
 # The OUTPUT_LANGUAGE tag is used to specify the language in which all 
 # documentation generated by doxygen is written. Doxygen will use this 
@@ -387,7 +387,7 @@ COLS_IN_ALPHA_INDEX    = 4
 # The IGNORE_PREFIX tag can be used to specify one or more prefixes that 
 # should be ignored while generating the index headers.
 
-IGNORE_PREFIX          = GWEN
+IGNORE_PREFIX          = GWEN_
 
 #---------------------------------------------------------------------------
 # configuration options related to the HTML output
@@ -402,7 +402,7 @@ GENERATE_HTML          = YES
 # If a relative path is entered the value of OUTPUT_DIRECTORY will be 
 # put in front of it. If left blank `html' will be used as the default path.
 
-HTML_OUTPUT            = gwenhywfar-@GWENHYWFAR_VERSION_RELEASE_STRING@
+HTML_OUTPUT            = apidoc
 
 # The HTML_HEADER tag can be used to specify a personal HTML header for 
 # each generated HTML page. If it is left blank doxygen will generate a 
@@ -682,12 +682,12 @@ EXPAND_AS_DEFINED      =
 
 # The TAGFILES tag can be used to specify one or more tagfiles.
 
-#TAGFILES               = @docpath@/libchipcard.tag
+TAGFILES               = @DOXYGEN_TAGFILES@
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create 
 # a tag file that is based on the input files it reads.
 
-GENERATE_TAGFILE       = @docpath@/gwenhywfar.tag
+GENERATE_TAGFILE       = gwenhywfar.tag
 
 # If the ALLEXTERNALS tag is set to YES all external classes will be listed 
 # in the class index. If set to NO only the inherited external classes 
