@@ -34,6 +34,17 @@ gwenhywfar-config: gwenhywfar-config.in
 srcdoc: Doxyfile
 	doxygen
 
+install-srcdoc: $(PACKAGE).tag
+	test -d "$(DESTDIR)@docpath@/$(PACKAGE)" || \
+	  mkdir -p "$(DESTDIR)@docpath@/$(PACKAGE)"
+	cp apidoc/* "$(DESTDIR)@docpath@/$(PACKAGE)"
+	cp "$(PACKAGE).tag" "$(DESTDIR)@docpath@/"
+	if test -x "$(DESTDIR)@docpath@/$(PACKAGE)/installdox"; then \
+	  ( cd "$(DESTDIR)@docpath@/$(PACKAGE)" && \
+	    for ff in ${DOXYGEN_TAGFILES}; do \
+	     ./installdox -q -l "`basename $$ff`@../`basename $$ff | $(SED) -e s/.tag//`";\
+	    done ) \
+	fi
 
 rpm:    $(PACKAGE).spec dist
 	rpmbuild="rpm" && \
