@@ -1,4 +1,14 @@
-INCLUDES = $(all_includes) -I$(srcdir)/os/$(GWEN_OS)
+INCLUDES = $(all_includes) \
+ -I$(top_srcdir) \
+ -I$(top_srcdir)/src/base \
+ -I$(top_srcdir)/src/crypt \
+ -I$(top_srcdir)/src/io \
+ -I$(top_srcdir)/src/ipc \
+ -I$(top_srcdir)/src/net \
+ -I$(top_srcdir)/src/os \
+ -I$(top_srcdir)/src/parser \
+ -I$(top_srcdir)/src/ui
+ 
 
 # Define variables depending on whether we have ncurses available or
 # not.
