@@ -1,4 +1,13 @@
-INCLUDES=@all_includes@
+INCLUDES=@all_includes@ -I$(top_srcdir) \
+ -I$(top_srcdir)/src/base \
+ -I$(top_srcdir)/src/crypt \
+ -I$(top_srcdir)/src/io \
+ -I$(top_srcdir)/src/ipc \
+ -I$(top_srcdir)/src/net \
+ -I$(top_srcdir)/src/os \
+ -I$(top_srcdir)/src/parser \
+ -I$(top_srcdir)/src/ui
+ 
 
 noinst_LTLIBRARIES=libcryptimpl.la
 
